# embedding-model-shootout

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
docs/: architecture.md  benchmarks.md  corpus.md
emb_shootout/: __init__.py  cli.py  corpus.py  io_utils.py  pareto.py  plot.py  queries.py  sweep.py  validate.py
emb_shootout/providers/: __init__.py  bge.py  cohere_provider.py  hash_embedder.py  nomic.py  openai_provider.py  voyage.py
notebooks/: _build_notebook.py  _verify.py  reproduce.ipynb
results/: hash.json
scripts/: capture_demo.sh
tests/: test_architecture_doc.py  test_benchmarks_md_snapshot.py  test_capture_demo_smoke.py  test_cli.py  test_cli_sweep_run_out_alias.py  test_corpus.py  test_deferred_validation_sweep.py  test_hash_baseline_description.py  test_io_utils_atomic_write.py  test_pareto.py  test_plot.py  test_provider_batch_size_validation.py  test_public_surface.py  test_readme_banned_phrases.py  test_readme_decision_range.py  test_readme_snapshot.py  test_reproduce_notebook.py  test_sweep.py  test_validate.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
