[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "embedding-model-shootout"
version = "0.0.1"
description = "Reproducible empirical comparison of embedding models on a technical-docs corpus: recall@k, NDCG, cost per million tokens, latency, Pareto frontier."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "JT McHorse", email = "jmchorse.tech@gmail.com" }]
keywords = ["llm", "embeddings", "benchmark", "rag", "retrieval"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

# The corpus layer is intentionally dependency-free: it walks the local
# Python interpreter's stdlib using `inspect` and emits JSONL. Embedder
# providers (openai, voyageai, cohere, sentence-transformers, …) ship as
# optional extras when issue #2 lands.
dependencies = []

[project.optional-dependencies]
# Provider extras for the model sweep (#2). Install per provider you want
# to benchmark; the dep-free `hash` provider is always available.
openai = ["openai>=1.40"]
voyage = ["voyageai>=0.3"]
cohere = ["cohere>=5.13"]
sbert  = ["sentence-transformers>=3.0", "einops>=0.8"]   # einops needed by nomic
all-providers = [
  "emb-shootout[openai,voyage,cohere,sbert]",
]
# Optional extra for rendering the cost-vs-recall@5 Pareto plot (#3). The
# frontier *computation* is dep-free pure Python in `emb_shootout.pareto`;
# only `emb-shootout sweep plot` needs matplotlib.
plot = ["matplotlib>=3.8"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  # Powers tests/test_workflows_yaml_parseable.py (#49), the inverse
  # safety net for the 21-day silent CI outage closed in portfolio-ops#27.
  "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/jt-mchorse/embedding-model-shootout"
Issues    = "https://github.com/jt-mchorse/embedding-model-shootout/issues"

[project.scripts]
emb-shootout = "emb_shootout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["emb_shootout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Notebooks routinely start a cell with sys.path / env shim code before
# the project imports — that's the standard "make this notebook runnable
# from a fresh clone" idiom. E402 (module-level import not at top of
# cell) is a false positive in that pattern.
"*.ipynb" = ["E402"]
